tests/tooling/fixtures/native/recovery/positive/message_send_nonzero_global_identifier_post_extern_call_non_fast_path.objc3
module MessageSendNonzeroGlobalIdentifierPostExternCallNonFastPath;

let receiver = 7;

fn touch() -> i32;

fn main() -> i32 {
  touch();
  return [receiver ping];
}
